# stagehand-rs

./: Cargo.toml  README.md
examples/: browserbase_quickstart.rs  local_highlight.rs
src/: browser.rs  client.rs  config.rs  context.rs  dom_scripts.rs  lib.rs  logging.rs  metrics.rs  page.rs  runtime.rs  stagehand.rs
src/a11y/: mod.rs
src/adapter/: chromiumoxide.rs  mod.rs
src/llm/: client.rs  error.rs  mod.rs  openai.rs  prompts.rs  provider.rs
src/page/: local.rs
src/types/: a11y.rs  agent.rs  llm.rs  mod.rs  page.rs
tests/: chromiumoxide_smoke.rs  local_core.rs
