[package]
name = "stagehand-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
chromiumoxide = { version = "0.5", default-features = false, features = ["tokio-runtime"] }
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
async-openai = "0.30.1"

[dev-dependencies]
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
