[package]
name = "stagehand-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.17"
dotenvy = "0.15"
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
chromiumoxide = { version = "0.5", default-features = false, features = ["tokio-runtime"] }
chromiumoxide_types = "0.5"
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
async-openai = "0.30.1"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
anyhow = "1.0"
serial_test = "2.0"
tempfile = "3.10"
